--- a/src/app/modules/projects/components/project/project.component.html
+++ b/src/app/modules/projects/components/project/project.component.html
@@ -1,7 +1,4 @@
-<div class="dropdown-divider  my-3"></div>
-
-<h5 class="my-3">Project Information</h5>
-
+<h5 class="lead">Project Information</h5>
 <div class="form-row">
     <div class="col-5">
         <!-- project name -->
@@ -88,14 +85,34 @@
             </div>
             <input type="number" class="form-control" [(ngModel)]="project.budget" [readOnly]="mode ==='read'">
         </div>
+    </div>
+    <div class="col-1"></div>
+
+    <!-- status -->
+    <div class="col-5">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text">Project Status</span>
+            </div>
+            <!-- <input type="number" class="form-control" [(ngModel)]="project.budget" [readOnly]="mode ==='read'"> -->
+            <div class="btn-group btn-group-toggle form-control" data-toggle="buttons">
+                <label
+                    [className]="project.isClosed ? 'btn btn-outline-secondary btn-sm' : 'btn btn-outline-secondary active btn-sm'">
+                    <input type="radio" name="isClosed" id="open" [value]=false [(ngModel)]="project.isClosed"
+                        [disabled]="mode==='create' || mode==='read'">
+                    Open
+                </label>
+                <label
+                    [className]="project.isClosed ? 'btn btn-outline-secondary active btn-sm' : 'btn btn-outline-secondary btn-sm' ">
+                    <input type="radio" name="isClosed" id="closed" [value]=true [(ngModel)]="project.isClosed"
+                        [disabled]="mode==='create' || mode==='read'">
+                    Closed
+                </label>
+            </div>
+        </div>
 
     </div>
-
-    <div class="col-6"></div>
-    <div class="col-1"></div>
 </div>
-
-<div class="dropdown-divider  my-3"></div>
 
 <div class=" my-3"></div>
 
@@ -114,9 +131,7 @@
     </div>
     <div class="col-1"></div>
 </div>
-
-<div class="dropdown-divider  my-3"></div>
-
+<div class="my-3"></div>
 <div class="form-row">
     <div class="col-11">
         <!-- team members -->
@@ -141,7 +156,7 @@
     </div>
 </div>
 
-<div class="dropdown-divider  my-3"></div>
+<div class=" my-3"></div>
 <div class="form-row">
     <div class="col-11">
         <!-- description -->
@@ -149,44 +164,10 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Description</span>
             </div>
-            <textarea class="form-control" aria-label="With textarea" [(ngModel)]="project.description"></textarea>
-
-            <!-- <textarea type="text" class=" form-control" cols="70" rows="6" [(ngModel)]="project.description"
-                [readOnly]="mode === 'read'"></textarea>
-        </div> -->
-            <!-- <span *ngIf="alerts.description" class="error my-2"><small>{{alerts.description.msg}}</small></span> -->
+            <textarea class="form-control" aria-label="With textarea" [(ngModel)]="project.description"
+                [readOnly]="mode !=='create' && mode!=='update'"></textarea>
         </div>
         <div class="col-1"></div>
     </div>
 
     <div class="  my-3"></div>
-
-    <div *ngIf="mode ==='read' || mode==='update'">
-        <div>
-            <div class="dropdown-divider  my-3"></div>
-            <h5 class="my-3">Project Status</h5>
-            <div class="form-row">
-                <div class="col-12">
-
-                    <!-- status (isClosed) -->
-                    <div class="input-group">
-                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                            <label
-                                [className]="project.isClosed ? 'btn btn-outline-secondary' : 'btn btn-outline-secondary active'">
-                                <input type="radio" name="isClosed" id="open" [value]=false
-                                    [(ngModel)]="project.isClosed" [disabled]="mode==='create' || mode==='read'">
-                                Open
-                            </label>
-                            <label
-                                [className]="project.isClosed ? 'btn btn-outline-secondary active' : 'btn btn-outline-secondary'">
-                                <input type="radio" name="isClosed" id="closed" [value]=true
-                                    [(ngModel)]="project.isClosed" [disabled]="mode==='create' || mode==='read'">
-                                Closed
-                            </label>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
