--- a/src/app/modules/wp/component/wp.component.html
+++ b/src/app/modules/wp/component/wp.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown-divider  my-3"></div>
 
-<h5 class="my-3">Work Package Information</h5>
+<h5 class="lead">Work Package Information</h5>
 
 <div class="form-row">
     <div class="col-5">
@@ -183,7 +183,7 @@
 </div>
 <div class=" my-3"></div>
 <div class="dropdown-divider  my-3"></div>
-<h5 class="my-3">Project Manager Planning Information</h5>
+<h5 class="lead">Project Manager Planning Information</h5>
 
 <p-table [value]="wp.pmPlannings" (onEditComplete)="onEditComplete($event)" [columns]="cols"
     [style]="{'max-width':'900px','min-width':'400px','text-align':'center'}">
