--- a/src/app/modules/wp/pages/wp-view/wp-view.component.html
+++ b/src/app/modules/wp/pages/wp-view/wp-view.component.html
@@ -1,15 +1,13 @@
-<div class="card mx-1">
-    <div class="card-body">
-        <!-- Title -->
-        <h3 class="display-4">Work Package</h3>
-        <!-- alert -->
-        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
+<!-- <div class="card mx-1">
+    <div class="card-body"> -->
+<!-- Title -->
+<h3 class="display-4">Work Package</h3>
+<!-- alert -->
+<shared-alertPromp [alerts]="alerts"></shared-alertPromp>
 
 
-        <app-wp *ngIf="wp" [wp]="wp" [mode]="mode" [validWpCode]="validWpCode" (changeWpCode)="validateWpCode()"
-            [alerts]="alerts"></app-wp>
-
-        <h5 class="lead">Work Package Reports</h5>
-        <app-wp-report-list *ngIf="wp" [wpCode]="wp.workPackageCode"></app-wp-report-list>
+<app-wp *ngIf="wp" [wp]="wp" [mode]="mode" [validWpCode]="validWpCode" (changeWpCode)="validateWpCode()"
+    [alerts]="alerts"></app-wp>
+<!-- 
     </div>
-</div>
+</div> -->
