--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -1,14 +1,27 @@
 <ul class="list-group list-group-flush ">
     <li class="list-group-item bg-navList"> MAIN MENU</li>
-    <li class="list-group-item bg-navList"><a routerLink="/content/employees">Employees</a></li>
-    <li class="list-group-item bg-navList"><a routerLink="/content/timesheets">Timesheets</a></li>
-    <li class="list-group-item bg-navList"><a routerLink="/content/timesheets/approver/view/list">Pending Timsheets</a>
-    </li>
-    <li class="list-group-item bg-navList"><a routerLink="/content/reports">Reports</a></li>
-    <li class="list-group-item bg-navList"><a routerLink="/content/wp">Work Packages</a></li>
-    <li class="list-group-item bg-navList">Porta ac consectetur ac</li>
-    <li class="list-group-item bg-navList">Vestibulum at eros</li>
-    <li class="list-group-item bg-navList"><a routerLink="/content/projects">Projects</a></li>
+    <li class="list-group-item bg-navList ">
+        <a routerLink="/content/employees" class="d-flex align-items-center">
+            <span class="material-icons">group</span>
+            <span>Employees</span>
+        </a></li>
+    <li class="list-group-item bg-navList">
+        <a routerLink="/content/timesheets" class="d-flex align-items-center">
+            <span class="material-icons">event</span>
+            <span>Timesheets</span>
+        </a></li>
+    <li class="list-group-item bg-navList">
+        <a routerLink="/content/timesheets/approver/view/list" class="d-flex align-items-center">
+            <span class="material-icons">rate_review</span>
+            <span>Pending Timsheets</span>
+        </a></li>
+    <!-- <li class="list-group-item bg-navList"><a routerLink="/content/reports">Reports</a></li> -->
+    <!-- <li class="list-group-item bg-navList"><a routerLink="/content/wp">Work Packages</a></li> -->
+    <li class="list-group-item bg-navList">
+        <a routerLink="/content/projects" class="d-flex align-items-center">
+            <span class="material-icons">work</span>
+            <span>Projects</span>
+        </a></li>
 
 
 </ul>
