--- a/src/app/modules/reports/pages/wp-report-list/wp-report-list.component.html
+++ b/src/app/modules/reports/pages/wp-report-list/wp-report-list.component.html
@@ -25,13 +25,12 @@
 
             <td>
                 <button type="button" class="btn btn-link btn-sm"
-                    [routerLink]="['reports/WorkPackageReport/view/', rowData.workPackageReportId]">View</button>
+                    (click)="onWpReportClick(rowData.workPackageReportId)">View</button>
+                <!-- [routerLink]="['reports/WorkPackageReport/view/', rowData.workPackageReportId]" -->
             </td>
         </tr>
     </ng-template>
 </p-table>
-<button type="button" class="btn btn-link btn-sm" [routerLink]="['abc',32 ]">View</button>
-
 
 <!-- </div>
 </div> -->
