--- a/src/app/modules/wp/pages/wp-management/wp-management.component.html
+++ b/src/app/modules/wp/pages/wp-management/wp-management.component.html
@@ -1,21 +1,27 @@
 <p-tabView (onChange)="onChangeTab($event)" [activeIndex]="activeIndex">
     <p-tabPanel header="...">
     </p-tabPanel>
-    <p-tabPanel header="View">
+    <p-tabPanel header="View" leftIcon="pi pi-eye">
         <!-- <router-outlet></router-outlet> -->
         <app-wp-view></app-wp-view>
     </p-tabPanel>
-    <p-tabPanel header="Edit">
+    <p-tabPanel header="Edit" leftIcon="pi pi-pencil">
+        <!-- [disabled]="true" -->
         <!-- <router-outlet></router-outlet> -->
         <app-wp-edit></app-wp-edit>
     </p-tabPanel>
-    <p-tabPanel header="Work Package Reports">
-        <app-wp-report-list [wpCode]="workPackageCode"></app-wp-report-list>
+    <p-tabPanel header="Work Package Reports" leftIcon="pi pi-th-large">
+        <app-wp-report-list [wpCode]="workPackageCode" (goReportPage)="goReportPage($event)"></app-wp-report-list>
 
     </p-tabPanel>
-    <p-tabPanel header="Work Package Report">
-        <router-outlet></router-outlet>
-    </p-tabPanel>
+    <div *ngFor="let id of wpReportId">
+        <p-tabPanel header="Work Package Report" leftIcon="pi pi-bookmark" [closable]="true">
+            <app-wp-report-view [wpReportId]="id" *ngIf="id"></app-wp-report-view>
+        </p-tabPanel>
+    </div>
+    <!-- <p-tabPanel header="Work Package Report">
+        <app-wp-report-view [wpReportId]="wpReportId" *ngIf="wpReportId"></app-wp-report-view>
+    </p-tabPanel> -->
     <!-- <p-tabPanel header="Create">
         <app-wp-create [project]="project"></app-wp-create>
     </p-tabPanel> -->
