add toast component, add routing service, project/wp/report display in tab view

--- a/src/app/core/layout/toolbar/toolbar.component.css
+++ b/src/app/core/layout/toolbar/toolbar.component.css
@@ -3,3 +3,8 @@
     padding: 21px 0;
     justify-content: flex-end;
   }
+
+.title{
+  font-size: 1.75rem !important;
+  font-family: 'Signika', sans-serif !important;
+}
