--- a/src/app/core/layout/toolbar/toolbar.component.html
+++ b/src/app/core/layout/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-theme">
     <div>
-        <span class="navbar-brand mb-0 h1">
-            App
+        <span class="navbar-brand mb-0 h1 title">
+            Gerg's Beans
         </span>
         <span class="navbar-text" *ngIf="currentUser">
             {{currentUser.credentialId}}
