--- a/src/app/core/layout/content-layout/content-layout.component.html
+++ b/src/app/core/layout/content-layout/content-layout.component.html
@@ -1,3 +1,4 @@
+<app-toast-display></app-toast-display>
 <app-toolbar></app-toolbar>
 
 <mat-sidenav-container class="example-container">
@@ -10,5 +11,4 @@
         <router-outlet class="margin-fix my-3"></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
-
 <!-- <app-footer></app-footer> -->
