--- a/src/app/modules/reports/pages/wp-report-list/wp-report-list.component.html
+++ b/src/app/modules/reports/pages/wp-report-list/wp-report-list.component.html
@@ -1,7 +1,11 @@
 <!-- <div class="card mx-1">
     <div class="card-body"> -->
-
-<h3 class="display-4">Work Package Report List</h3>
+<div class="d-flex justify-content-between">
+    <h3 class="display-4">Work Package Report List</h3>
+    <div>
+        <button type="button" class="btn btn-primary my-2" (click)="onCreatClick($event)">Create</button>
+    </div>
+</div>
 <div class="dropdown-divider  my-3"></div>
 
 <p-table [columns]="cols" [value]="displayReports" [paginator]="true" [rows]="10">
