--- a/src/app/modules/timesheets/pages/timesheet-edit/timesheet-edit.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-edit/timesheet-edit.component.html
@@ -12,8 +12,30 @@
         <div class="dropdown-divider my-3"></div>
 
         <div class="d-flex flex-row-reverse">
+            <button type="button" class="btn btn-danger m-1 px-2" (click)="onSubmit($event,template)">Submit</button>
             <button type="button" class="btn btn-primary  m-1 px-3" (click)="onSave($event)">Save</button>
-            <button type="button" class="btn btn-primary m-1 px-2" (click)="onSubmit($event)">Submit</button>
+            <button type="button" class="btn btn-secondary  m-1 px-3" (click)="onCancel($event)">Cancel</button>
         </div>
     </div>
 </div>
+
+
+<!-- confirmation window -->
+<ng-template #template>
+    <div class="modal-header">
+        <h4 class="modal-title pull-left">Submit Timsheet</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <strong class="text-warning">This action cannot be undo.</strong><br>
+        <strong class="h5">Are you sure to submit this timesheet to your supervisor?</strong><br>
+        After submission, this timesheet will not be editable anymore and this timesheet will be in pending state.<br>
+
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary  m-1 px-3" (click)="modalRef.hide()">Cancel</button>
+        <button type="button" class="btn btn-danger  m-1 px-3" (click)="onSubmitConfrimed()">Submit</button>
+    </div>
+</ng-template>
