add supervisor add members page, validate wp code

--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -6,6 +6,11 @@
             <span>Employees</span>
         </a></li>
     <li class="list-group-item bg-navList">
+        <a routerLink="/content/projects/supervisor/projectlist" class="d-flex align-items-center">
+            <span class="material-icons">person_add</span>
+            <span>Manage Project Members</span>
+        </a></li>
+    <li class="list-group-item bg-navList">
         <a routerLink="/content/timesheets" class="d-flex align-items-center">
             <span class="material-icons">event</span>
             <span>Timesheets</span>
