--- a/src/app/modules/projects/pages/project-list-supervisor/project-list-supervisor.component.html
+++ b/src/app/modules/projects/pages/project-list-supervisor/project-list-supervisor.component.html
@@ -1,15 +1,15 @@
 <div class="card mx-1">
     <div class="card-body">
-        <h3 class="display-4">Suprvisor Project List</h3>
+        <h3 class="display-4">Assign Employee to Project</h3>
         <div class="dropdown-divider "></div>
 
         <div class="d-flex flex-row-reverse">
-            <button type="button" class="btn btn-primary my-2" routerLink="creation">Create</button>
         </div>
-
-        <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="10">
+        <h3 class="lead">The table below lists all your project and you can assign members to work on them.</h3>
+        <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="10"
+            [style]="{'text-align':'center'}">
             <ng-template pTemplate="caption">
-                <div style="text-align: right">
+                <div style="text-align: center">
                     <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
                     <input type="text" pInputText size="50" placeholder="Global Filter"
                         (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
