--- a/src/app/modules/projects/pages/project-list/project-list.component.html
+++ b/src/app/modules/projects/pages/project-list/project-list.component.html
@@ -11,7 +11,8 @@
             <button type="button" class="btn btn-primary my-2" routerLink="creation">Create</button>
         </div>
 
-        <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="10">
+        <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="10"
+            [style]="{'text-align':'center'}">
             <ng-template pTemplate="caption">
                 <div style="text-align: right">
                     <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
