--- a/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
@@ -1,8 +1,11 @@
 <div class="card mx-1">
     <div class="card-body">
         <h3 class="display-4">Pending Timesheet List</h3>
+        <div class="dropdown-divider "></div>
+        <h3 class="lead">The table below lists all pending timesheet that waiting your approval.</h3>
 
-        <p-table #dt [columns]="cols" [value]="displayTimesheet" [paginator]="true" [rows]="10">
+        <p-table #dt [columns]="cols" [value]="displayTimesheet" [paginator]="true" [rows]="10"
+            [style]="{'text-align':'center'}">
             <ng-template pTemplate="caption">
                 <div style="text-align: right">
                     <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
@@ -29,7 +32,7 @@
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
                         <input *ngSwitchCase="'versionNumber'" pInputText type="text" class="ui-column-filter"
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
-                        <input *ngSwitchCase="' weekEndingIn'" pInputText type="text" class="ui-column-filter"
+                        <input *ngSwitchCase="'weekEndingIn'" pInputText type="text" class="ui-column-filter"
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
                         <input *ngSwitchCase="'status'" pInputText type="text" class="ui-column-filter"
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
