--- a/src/app/modules/wp/pages/wp-list/wp-list.component.html
+++ b/src/app/modules/wp/pages/wp-list/wp-list.component.html
@@ -6,7 +6,7 @@
     <!-- <h3 class="display-4">Work Package List</h3> -->
     <button type="button" class="btn btn-primary mb-3" routerLink="wp/createwp">Create</button>
 </div>
-<p-table #dt [columns]="cols" [value]="displayPackage" [paginator]="true" [rows]="10">
+<p-table #dt [columns]="cols" [value]="displayPackage" [paginator]="true" [rows]="10" [style]="{'text-align':'center'}">
     <ng-template pTemplate="caption">
         <div style="text-align: right">
             <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
