--- a/src/app/core/layout/nav/nav.component.css
+++ b/src/app/core/layout/nav/nav.component.css
@@ -3,16 +3,20 @@
     text-decoration:none !important;
     color:white !important;
 }
-.material-icons{
+>>>.material-icons{
     margin:15px;
     margin-right: 0px;
     margin-left: 5px;
+    visibility:visible !important;
+    opacity:1 !important;
 }
+
 .navText{
     display: inline-block;
     margin-left: 20px;
     padding-right: 30px;
 }
+
 .button{
     border-width: 0;
     background-color: inherit;
