add dashboard welcome page

--- a/src/app/modules/dashboard/pages/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard.component.html
@@ -1,5 +1,22 @@
-<p>start of dashboard.component.html</p>
+<div class="card mx-1">
+    <div class="card-body">
+        <!-- Title -->
+        <h3 class="display-4">Welcome to Gerg's Beans</h3>
+        <div class="dropdown-divider my-3"></div>
+        <h4 class="lead">Title</h4>
+
+        <p>Lorem ipsum dolor sit amet, ut aliquet, sed suscipit amet ut maecenas. Id ac mi. Sociis vulputate amet,
+            aliquam in donec arcu nullam, nunc integer praesent vitae nunc sit nullam. Natoque malesuada nunc diam,
+            laoreet in ipsum quisque ut egestas, litora rutrum vel dolor consequat consectetuer, nulla in sodales
+            fringilla eros lacus. Nulla per et nullam. Congue nulla erat, turpis felis consectetuer per fames neque,
+            consequat fusce placerat velit ut posuere sollicitudin, pretium at. Wisi pellentesque, tempus massa mi velit
+            eu condimentum magnis. Nec id iusto, elit condimentum luctus aliquam aliquam molestie cursus, viverra ante,
+            dui egestas. Lorem ut, facilisis sapien quis, turpis eget, urna at volutpat nulla mauris, vitae erat. Id
+            imperdiet nulla, eu nunc ac erat dolor, dictumst arcu odio erat nullam libero convallis, eget eros duis
+            vitae. Hic nunc integer aliquam a, repudiandae tempor lectus nec vestibulum aliquam litora, quis arcu,
+            adipiscing sodales vel porttitor congue mus integer, cursus feugiat in quam turpis.</p>
+
+    </div>
 
 
-<p>dashboard works!</p>
-<p>dashboard works!</p>
+</div>
