--- a/src/app/core/layout/toolbar/toolbar.component.html
+++ b/src/app/core/layout/toolbar/toolbar.component.html
@@ -3,6 +3,9 @@
         <span class="navbar-brand mb-0 h1 title">
             Gerg's Beans
         </span>
+        <span class="navbar-text">
+            fix version v1.0.1
+        </span>
         <span class="navbar-text" *ngIf="currentUser">
             {{currentUser.credentialId}}
         </span>
