--- a/src/app/core/layout/toolbar/toolbar.component.html
+++ b/src/app/core/layout/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
             {{currentUser.credentialId}}
         </span>
         <span class="navbar-text">
-            fix version v1.0.2
+            version v1.0.3
         </span>
 
     </div>
