change timesheet approver page bug

--- a/src/app/modules/employee/pages/employee-change-approver/employee-change-approver.component.html
+++ b/src/app/modules/employee/pages/employee-change-approver/employee-change-approver.component.html
@@ -46,7 +46,7 @@
                         </h5>
                         <div *ngIf="col.field ==='button'">
                             <button type="button" class="btn btn-link btn-sm"
-                                (click)="openModal(rowData[employeeId],template)">Change Timesheet Approver</button>
+                                (click)="openModal(rowData.employeeId,template)">Change Timesheet Approver</button>
                         </div>
                     </td>
                 </tr>
