fix approval page

--- a/src/app/modules/employee/pages/employee-edit/employee-edit.component.html
+++ b/src/app/modules/employee/pages/employee-edit/employee-edit.component.html
@@ -21,7 +21,7 @@
 </div>
 
 <!-- rest pw confirmation window -->
-<ng-template #template *ngIf="selectedEmp">
+<ng-template #template>
     <div class="modal-header">
         <h4 class="modal-title pull-left">Reset {{employee.empFirstName}}'s Password</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
