--- a/src/app/modules/wp/pages/wp-list/wp-list.component.html
+++ b/src/app/modules/wp/pages/wp-list/wp-list.component.html
@@ -4,7 +4,7 @@
 
 <div class="d-flex justify-content-between">
     <!-- <h3 class="display-4">Work Package List</h3> -->
-    <button type="button" class="btn btn-primary mb-3" routerLink="wp/createwp">Create</button>
+    <button type="button" class="btn btn-primary mb-3" [routerLink]="['wp/createwp/', projectId]">Create</button>
 </div>
 <p-table #dt [columns]="cols" [value]="displayPackage" [paginator]="true" [rows]="10" [style]="{'text-align':'center'}">
     <ng-template pTemplate="caption">
